--- a/index.html
+++ b/index.html
@@ -1,12 +1,165 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./index.css">
     <title>Document</title>
 </head>
+
 <body>
-    
+    <div class="header">
+        <nav>
+            <a href="###"><img src="./img/nav-logo.png" alt="logo"></a>
+
+            <ul>
+                <li><a href="###">Главная</a></li>
+                <li><a href="./registratsya/index.html">Сервера</a></li>
+                <li><a href="./dowload/index.html">Скачать</a></li>
+                <li><a href="#online-play">Открыть в браузере</a></li>
+                <li><a href="#start-follow">Цены</a></li>
+                <li><a href="###">Тех поддержка</a></li>
+                <li><a href="./contact/index.html">Контакты</a></li>
+            </ul>
+        </nav>
+        <div class="header-info">
+            <p>Сервис облачного гейминга</p>
+            <h1>Преврати свое устройство в игровое </h1>
+            <button>UPGRADE</button>
+        </div>
+    </div>
+
+    <!-- Облачный гейминг -->
+
+    <div class="install-page">
+        <img src="./img/Облачный-гейминг/ImageServerHost.png" alt="img">
+        <div class="install-page-info">
+            <p class="p-galvni"><span></span> Облачный гейминг</p>
+            <h1 class="h1-glavni">Как это работает</h1>
+            <p class="p-assisant">
+                Наши сервера запускают игру, и передают
+                вам картинку, которой вы можете управлять
+                в реальном времени!
+            </p>
+            <hr>
+            <p class="p-assisant" style="margin-bottom: 74px;">Приложение запустится на ПК с процессором
+                от 1.5 GHz , от 1 Gb RAM и доступом в интернет
+                от 15 мбит/с
+                на всех операционых системах
+                Windows 7, 8, 10 MacOS и Linux .
+            </p>
+            <a href="###" class="a-glavni">Загрузить</a>
+        </div>
+    </div>
+
+
+    <!-- Быстрый старт -->
+
+    <div class="start-game">
+        <p class="p-galvni"><span></span> Быстрый старт</p>
+        <h1 class="h1-glavni">Начни играть</h1>
+        <div class="start-game-cards">
+            <div class="img-card">
+                <img src="./img/Быстрый-старт/img1.png" alt="img1">
+                <span></span>
+                <img src="./img/Быстрый-старт/img2.png" alt="img1">
+                <span></span>
+                <img src="./img/Быстрый-старт/img3.png" alt="img1">
+                <span></span>
+                <img src="./img/Быстрый-старт/img4.png" alt="img1">
+            </div>
+            <div class="text-card">
+                <h4>Cоздайте аккаунт</h4>
+                <h4>Cкачайте модуль</h4>
+                <h4>Выберите тариф </h4>
+                <h4>Начни играть</h4>
+            </div>
+        </div>
+        <a href="###" class="a-glavni">Начать</a>
+    </div>
+
+    <!-- Гибкие тарифы -->
+
+    <div class="start-follow" id="start-follow">
+        <p class="p-galvni"><span></span>Гибкие тарифы</p>
+        <h1 class="h1-glavni">Доступные подписки</h1>
+        <div class="start-follow-cards">
+            <div class="start-follow-cards-card">
+                <h1>Почасовая оплата</h1>
+                <h3>45 р. - час</h3>
+                <div class="p-card">
+                    <p>Доступно:</p>
+                    <p>Каталог игр</p>
+                    <p>Виртуальный ПК</p>
+                    <p>Безлимитная игровая сессия</p>
+                </div>
+                <button>Выбрать</button>
+            </div>
+            <div class="start-follow-cards-card">
+                <h1>Подписка Максимум</h1>
+                <h3>2999 р. - месяц</h3>
+                <div class="p-card">
+                    <p>Доступно:</p>
+                    <p>Каталог игр</p>
+                    <p>Виртуальный ПК</p>
+                    <p>Игровая сессия 10 часов/день</p>
+                </div>
+                <button>Выбрать</button>
+            </div>
+            <div class="start-follow-cards-card">
+                <h1>Почасовая оплата</h1>
+                <h3>45 р. - час</h3>
+                <div class="p-card">
+                    <p>Доступно:</p>
+                    <p>Каталог игр</p>
+                    <p>Игровая сессия 4 часов/день</p>
+                </div>
+                <button>Выбрать</button>
+            </div>
+        </div>
+        <span class="bottom-span"></span>
+    </div>
+
+    <!-- Играть можно в браузере -->
+
+    <div class="online-play" id="online-play">
+        <div class="online-play-info">
+            <p class="p-galvni"><span></span> Играть можно в браузере</p>
+            <h1 class="h1-glavni">Запускайте на любых устройствах</h1>
+            <p class="p-assisant">Наш модуль доступен на все популярные ОС
+                и работает на всех компьютерах.</p>
+            <a href="###" class="a-glavni">Открыть в браузере</a>
+        </div>
+        <img src="./img/ImageBrowser.png" alt="image">
+    </div>
+
+    <!-- Игровые сервера на карте -->
+
+    <div class="map">
+        <p class="p-galvni"><span></span>Игровые сервера на карте</p>
+        <h1 class="h1-glavni">Карта локаций</h1>
+        <img src="./img/map.png" alt="map">
+    </div>
+
+    <!-- footer -->
+
+    <footer>
+        <div class="footer-left">
+            <a href="###"><img src="./img/footer/footer-logo.png" alt="footer-logo"></a>
+            <p>2022. All rights reserved.</p>
+            <p>Design by desart <img src="./img/footer/Vector.png" alt="icon" style="margin-left: 7px;"></p>
+        </div>
+        <div class="footer-right">
+            <a href="###">Политика конфиденциальности</a>
+            <a href="###">Файлы Coocie</a>
+            <div class="icons">
+                <a href="###"><img src="./img/footer/VK-com.png" alt="icon"></a>
+                <a href="###"><img src="./img/footer/Discord.png" alt="icon"></a>
+                <a href="###"><img src="./img/footer/YouTube.png" alt="icon"></a>
+            </div>
+        </div>
+    </footer>
 </body>
+
 </html>
