--- a/index.html
+++ b/index.html
@@ -9,18 +9,18 @@
 </head>
 
 <body>
-    <div class="header">
+    <div class="header d-none d-lg-block">
         <nav>
-            <a href="###"><img src="./img/nav-logo.png" alt="logo"></a>
+            <a href="###" class="header_logo"><img src="./img/nav-logo.png" alt="logo" class="logo"></a>
 
-            <ul>
-                <li><a href="###">Главная</a></li>
-                <li><a href="./registratsya/index.html">Сервера</a></li>
-                <li><a href="./dowload/index.html">Скачать</a></li>
-                <li><a href="#online-play">Открыть в браузере</a></li>
-                <li><a href="#start-follow">Цены</a></li>
-                <li><a href="###">Тех поддержка</a></li>
-                <li><a href="./contact/index.html">Контакты</a></li>
+            <ul class="navbar_menu">
+                <li><a href="###" class="navbar_link">Главная</a></li>
+                <li><a href="./registratsya/index.html" class="navbar_link">Сервера</a></li>
+                <li><a href="./dowload/index.html" class="navbar_link">Скачать</a></li>
+                <li><a href="#online-play" class="navbar_link">Открыть в браузере</a></li>
+                <li><a href="#start-follow" class="navbar_link">Цены</a></li>
+                <li><a href="###" class="navbar_link">Тех поддержка</a></li>
+                <li><a href="./contact/index.html" class="navbar_link">Контакты</a></li>
             </ul>
         </nav>
         <div class="header-info">
@@ -33,7 +33,7 @@
     <!-- Облачный гейминг -->
 
     <div class="install-page">
-        <img src="./img/Облачный-гейминг/ImageServerHost.png" alt="img">
+        <img src="./img/Облачный-гейминг/ImageServerHost.png" alt="img" class="header_img">
         <div class="install-page-info">
             <p class="p-galvni"><span></span> Облачный гейминг</p>
             <h1 class="h1-glavni">Как это работает</h1>
@@ -81,7 +81,7 @@
 
     <!-- Гибкие тарифы -->
 
-    <div class="start-follow" id="start-follow">
+    <div class="start-follow">
         <p class="p-galvni"><span></span>Гибкие тарифы</p>
         <h1 class="h1-glavni">Доступные подписки</h1>
         <div class="start-follow-cards">
@@ -123,7 +123,7 @@
 
     <!-- Играть можно в браузере -->
 
-    <div class="online-play" id="online-play">
+    <div class="online-play" >
         <div class="online-play-info">
             <p class="p-galvni"><span></span> Играть можно в браузере</p>
             <h1 class="h1-glavni">Запускайте на любых устройствах</h1>
