--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
         <nav>
             <a href="###" class="header_logo"><img src="./img/nav-logo.png" alt="logo" class="logo"></a>
 
-            <ul class="navbar_menu">
+            <ul class="navbar_menu  ">
                 <li><a href="###" class="navbar_link">Главная</a></li>
                 <li><a href="./registratsya/index.html" class="navbar_link">Сервера</a></li>
                 <li><a href="./dowload/index.html" class="navbar_link">Скачать</a></li>
@@ -24,9 +24,13 @@
             </ul>
         </nav>
         <div class="header-info">
-            <p>Сервис облачного гейминга</p>
+            <h2>Сервис облачного гейминга</h2>
             <h1>Преврати свое устройство в игровое </h1>
-            <button>UPGRADE</button>
+            <div class="header_button">
+                <div class="header_button">
+                    <button class="header_btn">UPGRADE</button>
+                </div>
+            </div>
         </div>
     </div>
 
@@ -123,7 +127,7 @@
 
     <!-- Играть можно в браузере -->
 
-    <div class="online-play" >
+    <div class="online-play">
         <div class="online-play-info">
             <p class="p-galvni"><span></span> Играть можно в браузере</p>
             <h1 class="h1-glavni">Запускайте на любых устройствах</h1>
@@ -146,7 +150,7 @@
 
     <footer>
         <div class="footer-left">
-            <a href="###"><img src="./img/footer/footer-logo.png" alt="footer-logo"></a>
+            <a href="./index.html"><img src="./img/footer/footer-logo.png" alt="footer-logo"></a>
             <p>2022. All rights reserved.</p>
             <p>Design by desart <img src="./img/footer/Vector.png" alt="icon" style="margin-left: 7px;"></p>
         </div>
@@ -156,7 +160,8 @@
             <div class="icons">
                 <a href="###"><img src="./img/footer/VK-com.png" alt="icon"></a>
                 <a href="###"><img src="./img/footer/Discord.png" alt="icon"></a>
-                <a href="###"><img src="./img/footer/YouTube.png" alt="icon"></a>
+                <a href="https://youtu.be/8MjDKbW_V4A?si=DCzkMy582rWf57CD"><img src="./img/footer/YouTube.png"
+                        alt="icon"></a>
             </div>
         </div>
     </footer>
