--- a/index.html
+++ b/index.html
@@ -41,13 +41,13 @@
         <div class="install-page-info">
             <p class="p-galvni"><span></span> Облачный гейминг</p>
             <h1 class="h1-glavni">Как это работает</h1>
-            <p class="p-assisant">
+            <p class="p-assisant_1">
                 Наши сервера запускают игру, и передают
                 вам картинку, которой вы можете управлять
                 в реальном времени!
             </p>
             <hr>
-            <p class="p-assisant" style="margin-bottom: 74px;">Приложение запустится на ПК с процессором
+            <p class="p-assisant_2" style="margin-bottom: 74px;">Приложение запустится на ПК с процессором
                 от 1.5 GHz , от 1 Gb RAM и доступом в интернет
                 от 15 мбит/с
                 на всех операционых системах
